<resources>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">"Modify Call request failed
"</string>
    <string name="modify_call_option_title">Which type of call?</string>
    <string name="modify_call_option_vt">VT</string>
    <string name="modify_call_option_vt_tx">Video transmit</string>
    <string name="modify_call_option_vt_rx">Video receive</string>
    <string name="modify_call_option_voice">Voice Only</string>
    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
    <string name="phone_info_divider">" ｜ "</string>
    <string name="antispam_marked_title">%1$s</string>
    <string name="inCallLabel">InCallUI</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="voicemail">Voicemail</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response from server</string>
    <string name="callFailed_server_unreachable">"Can't reach server"</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Antenna is off</string>
    <string name="callFailed_simError">SIM card error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">Dial request modified to USSD request.</string>
    <string name="callFailed_dialToSs">Dial request modified to SS request.</string>
    <string name="callFailed_dialToDial">Dial request modified to dial with different number.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_incoming_cb_enabled">Incoming calls are being barred.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="incall_error_supp_service_unknown">"This service isn't supported."</string>
    <string name="incall_error_supp_service_switch">Unable to switch calls.</string>
    <string name="incall_error_supp_service_separate">Unable to separate call.</string>
    <string name="incall_error_supp_service_transfer">"Can't transfer call."</string>
    <string name="incall_error_supp_service_conference">"Can't use conference call."</string>
    <string name="incall_error_supp_service_reject">"Can't reject call."</string>
    <string name="incall_error_supp_service_hangup">"Can't hang up call."</string>
    <string name="onscreen_add_call_text">Add call</string>
    <string name="onscreen_audio_mode_bluetooth">Bluetooth</string>
    <string name="onscreen_audio_mode_conference">Conference</string>
    <string name="onscreen_audio_mode_handset">Hands-free</string>
    <string name="onscreen_audio_mode_headset">Headphones</string>
    <string name="onscreen_audio_mode_speaker">Speaker</string>
    <string name="onscreen_audio_switch_mode">Switch audio</string>
    <string name="onscreen_call_record">Record</string>
    <string name="sip_call_not_support_record">"Can't record SIP calls"</string>
    <string name="onscreen_hold_text">Hold</string>
    <string name="onscreen_merge_calls_text">Merge calls</string>
    <string name="onscreen_mute_text">Mute</string>
    <string name="onscreen_swap_calls_text">Swap</string>
    <string name="onscreen_note_calls_text">Note</string>
    <string name="call_record_button_label">Recording %s</string>
    <string name="call_record_wait_label">Waiting</string>
    <string name="contacts_icon_label">Contacts</string>
    <string name="conference_call_number">%s people</string>
    <string name="conference_call_description" formatted="false">%s,%s etc. total %s</string>
    <string name="conference_call_single_description" formatted="false">%s etc. total %s</string>
    <string name="separate_from_conference">Separate call</string>
    <string name="callUnanswered_forwarded">Forwarded unanswered call</string>
    <string name="caller_manage_header">Conference call %s</string>
    <string name="incall_call_type_label_sip">Internet call</string>
    <string name="incoming_call_forwarded_title">Forward incoming calls</string>
    <string name="call_title_redialing_with_times">Redialed %d times</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_threeway_call">Three-way call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_call_ended">"Call ended "</string>
    <string name="card_title_on_hold">"On hold "</string>
    <string name="card_title_hanging_up">"Hanging up "</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_in_call_short">In call</string>
    <string name="onscreenEndCallText">End</string>
    <string name="calling_via_template">Calling using %s</string>
    <string name="contactPhoto">Contact photo</string>
    <string name="respond_via_sms_custom_message">Write your own...</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
    <string name="call_extension_conference_mode">Conference mode</string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_action_accept">Accept</string>
    <string name="notification_action_answer_video">Video</string>
    <string name="notification_action_answer_voice">Voice</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="notification_requesting_video_call">Incoming video request</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail numbers stored on SIM card.</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_image_button_answer">Swipe up to answer</string>
    <string name="description_image_button_reject">Swipe up to decline</string>
    <string name="description_image_button_message_enter">Swipe up to reply with message</string>
    <string name="description_image_button_message_exit">Hide messages</string>
    <string name="description_image_button_hangup">End</string>
    <string name="description_image_button_dialpad">Dialpad</string>
    <string name="description_image_button_tools">Options</string>
    <string name="description_target_answer">Answer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="waiting_close_airplane_mode">Just a sec…</string>
    <string name="select_voice_call_sim">Choose SIM card</string>
    <string name="msim_select_default_time_left">(%d s)</string>
    <string name="select_sim_hint">"Can't use SIM %2$d, while SIM %1$d is in use."</string>
    <string name="select_one_sim_title">Can only use SIM %1$d</string>
    <string name="can_not_use">"Can't use"</string>
    <string name="call_description_recording">Recording…</string>
    <string name="call_recording_error_privacy">"Can't record while you're in Guest mode"</string>
    <string name="call_recording_error_sd_access">"Can't access SD card"</string>
    <string name="call_recording_error_sd_unmounted">Stopped recording: SD card unmounted.</string>
    <string name="call_recording_error_low_storage">Not enough space on SD card.</string>
    <string name="call_recording_error_start_failed">Recorder is being used by another app.</string>
    <string name="call_recording_error_unknown">An unknown error occurred.</string>
    <string name="call_recording_notification_title">Call recorded</string>
    <string name="call_recording_notification_title_error">"Couldn't record call"</string>
    <string name="call_recording_notification_message">Touch to listen.</string>
    <string name="call_recording_notification_message_low_storage">SD card is full.</string>
    <string name="call_recording_notification_message_sd_unmounted">SD card has been removed.</string>
    <string name="call_recording_deny_permission_msg">"You denied record permission, can't record."</string>
    <string name="call_contacts_deny_permission_msg">"You denied read contacts permission, can't show contacts info."</string>
    <string name="antispam_marked_count">Reported by %1$d MIUI users</string>
    <string name="antispam_local_marked">Local marked</string>
    <string name="antispam_provider">Identified by %s</string>
    <string name="antispam_notification_title">Unknown number</string>
    <string name="suspect_info">Be careful: Always verify the identity of the contact by phone or video before responding to any messages involving your personal information.</string>
    <string name="fraud_call_answer">Answer</string>
    <string name="fraud_call_decline">Decline</string>
    <string name="fraud_call_waring">Be careful: Always verify the identity of the contact by phone or video before responding to any messages involving your personal information.</string>
    <string name="online_check_provider_info">Identified by %s</string>
    <string name="online_check_provider_name_by_cmb">China Merchants Bank</string>
    <string name="livetalk_dial">Using Top-up package</string>
    <string name="onscreen_change_to_voice">Voice call</string>
    <string name="onscreen_change_to_video">Video call</string>
    <string name="onscreen_switch_camera">Switch camera</string>
    <string name="onscreen_rcs_text">Messages</string>
    <string name="onscreen_close_preview_camera">Close camera</string>
    <string name="incoming_answer_voice_text">Voice answer</string>
</resources>