<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/call_info_padding_start" android:paddingEnd="@dimen/call_info_padding_end"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/primary_call_banner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/call_info_margin_top" android:layout_weight="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/incall_call_banner_text_color" android:ellipsize="end" android:gravity="end" android:id="@id/subId" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textAllCaps="true" />
        <com.android.incallui.view.AutoTextView android:textSize="@dimen/call_info_name_text_size" android:textColor="@color/incall_call_banner_text_color" android:ellipsize="end" android:gravity="center" android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/labelAndNumber" android:paddingTop="@dimen/call_info_label_and_number_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/sim_card_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/sim_indicator_margin_right" />
            <TextView android:textSize="@dimen/call_info_label_number_text_size" android:textColor="@color/incall_call_desp_text_color" android:id="@id/phoneNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textDirection="ltr" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/callCardStrangerDivider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textStyle="bold" android:textColor="@color/incall_call_desp_text_color" android:id="@id/callCardMarkTitle" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/callCardMarkDivider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:id="@id/callCardMarkCount" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <ImageView android:id="@id/callCardMarkProvider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="2.0dip" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/callCardNumberSep" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:id="@id/callCardTelocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/speechHDCall" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_speech_hd" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/callCardOptionalInfo" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:visibility="invisible" android:layout_width="1.0px" android:layout_height="wrap_content" android:text="@string/inCallLabel" android:singleLine="true" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:ellipsize="end" android:id="@id/callCardProviderInfo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/callCardExtraInfo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/callCardExtraDivider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip" />
                <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:ellipsize="end" android:id="@id/callCardExtraTitle" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/call_card_state_info" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/conference_sim_card_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/sim_indicator_margin_right" />
            <LinearLayout android:ellipsize="end" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true">
                <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:ellipsize="end" android:id="@id/callStateLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textAllCaps="true" />
                <ImageView android:id="@id/separatedLine" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" />
                <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/call_button_text_color_select" android:ellipsize="end" android:id="@id/livetalkLeftMinute" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textAllCaps="true" />
            </LinearLayout>
            <TextView android:textSize="@dimen/call_info_elapsed_time_text" android:textColor="@color/incall_call_banner_text_color" android:id="@id/elapsedTime" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/conferenceSeparatedLine" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/call_button_text_color_select" android:ellipsize="end" android:id="@id/conferenceModeLable" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_extension_conference_mode" android:singleLine="true" android:textAllCaps="true" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/conferenceCallMarkSep" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/incall_callcard_mark_sep" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:id="@id/conferenceCallNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/providerInfo" android:background="@android:color/transparent" android:paddingTop="@dimen/provider_info_top_bottom_padding" android:paddingBottom="@dimen/provider_info_top_bottom_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:ellipsize="marquee" android:id="@id/providerLabel" android:layout_width="0.0px" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="6.0" android:textAllCaps="true" android:paddingStart="@dimen/call_info_desp_common_margin" />
            <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:ellipsize="middle" android:gravity="end" android:id="@id/providerAddress" android:layout_width="0.0px" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="4.0" android:textAllCaps="true" android:paddingStart="@dimen/call_info_desp_common_margin" />
        </LinearLayout>
        <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:gravity="center_horizontal" android:id="@id/videoCallStateLabel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_call_call_info_label_margin_top" />
        <TextView android:textSize="@dimen/livetalk_call_provider_info_text_size" android:textColor="@color/incall_call_livetalk_provider_info_color" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/liveTalkProvider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/livetalk_call_provider_info_margin_top" android:text="@string/livetalk_dial" android:singleLine="true" android:textAllCaps="true" android:paddingStart="@dimen/call_info_desp_common_margin" />
        <TextView android:textSize="@dimen/call_info_label_state_text_size" android:textColor="@color/incall_call_desp_text_color" android:gravity="center_horizontal" android:id="@id/yellowpageWordAd" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:singleLine="true" android:textAllCaps="true" android:paddingStart="@dimen/call_info_desp_common_margin" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/video_call_banner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_call_elapsed_time_text_padding_top">
        <TextView android:textSize="@dimen/video_call_elapsed_time_text_size" android:textColor="@color/video_call_time" android:id="@id/videoCallElapsedTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
    <ImageView android:id="@id/callCardConferenceManageButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/conference_manage_margin_top" />
</LinearLayout>